chore: apply robust .gitignore for Angular frontend

--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -17,6 +17,8 @@
         <mat-label>Email</mat-label>
         <input
           matInput
+          type="email"
+          autocomplete="email"
           placeholder="seu@email.com"
           formControlName="email"
           required
@@ -28,6 +30,7 @@
         <input
           matInput
           type="password"
+          autocomplete="current-password"
           placeholder="Digite sua senha"
           formControlName="password"
           required
